--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
     <uses-permission
         android:name="android.permission.WRITE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-<!--    xuanfu-->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -35,6 +34,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FakeQQMusic"
         tools:targetApi="31">
+        <activity
+            android:name=".MusicListActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.musicplay.MusicActivity"
             android:exported="false"
@@ -59,8 +61,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.FakeQQMusic">
-        </activity>
+            android:theme="@style/Theme.FakeQQMusic"></activity>
     </application>
 
 </manifest>
